# sprite_animations_demo

./: .gitignore  Cargo.toml  README.md
assets/texture/: background.ron  sprite_sheet.ron
config/: display.ron
src/: main.rs  state.rs
src/components/: action.rs  animation.rs  camera_tag.rs  mod.rs  player_tag.rs
src/entities/: background.rs  camera.rs  mod.rs  player.rs
src/systems/: animation.rs  camera_follow.rs  mod.rs  move_player.rs
